# nmedit

./: .classpath  .gitignore  Makefile.am  Makefile.in  configure  configure.in  mkinstalldirs  sconsbuild.sh
archive/: projects.txt
archive/jMod/docs/: p303.htm  patch303.htm
archive/jMod/src/: jMod.mf  modules.properties
archive/java-nmcom/: build.xml
archive/java-nmcom/swig-i/: exceptions.i  make_public.i  nmpatch-config.i  ppf-config.i  swig_std_list.i
archive/libs/codecs/: midi.pdl
archive/libs/libnmpatch/: Makefile.am  SConstruct
archive/libs/libnmprotocol/: SConstruct  configure.in
archive/libs/libnmprotocol/doc/: architecture.dia  nmprotocol.dia
archive/libs/libnmprotocol/nmprotocol/: activepidlistener.h  alsadriver.h  getpatchlistmessage.h  getpatchmessage.h  lightmessage.h  midiexception.h  newpatchinslotmessage.h  nmprotocol.h  nmprotocollistener.h  parametermessage.h  rtmididriver.h  slotactivatedmessage.h  voicecountmessage.h
archive/libs/libnmprotocol/src/: Makefile.am  RtMidi.cpp  ackmessage.cc  activepidlistener.cc  getpatchlistmessage.cc  lightmessage.cc  midi.pdl  midimessage.cc  newpatchinslotmessage.cc  nmprotocol.cc  nmprotocol.i  parametermessage.cc  patchmessage.cc  slotsselectedmessage.cc  synth.cc
archive/libs/libnmprotocol/test/: Makefile.am  libnmprotocol_test1.cc  libnmprotocol_test2.cc  libnmprotocol_test3.cc  libnmprotocol_test4.cc  libnmprotocol_test6.cc  libnmprotocol_test8.cc  libnmprotocol_test9.cc
archive/libs/libpdl/src/: Makefile.am  packetmatcher.cc  pdl.i  pdlparser.yy  tracer.cc  variablematcher.cc
archive/nmedit/: configure.in
archive/patchloader/: configure.in
archive/patchloader/src/: patchloader.cc
jMod/docs/: Nord modular patch file format v3.03.URL  modules.ini  modules.xls  s303.txt
jMod/src/: deliver.bat  jMod.bat  version.txt
java-nmcom/: build.xml  history.txt
java-nmcom/swig-i/: cjstring.i  nmpatch-config.i  nmprotocol-config.i  pdl-config.i
libs/: .classpath  .cvsignore  .project  Makefile.am  Makefile.in
libs/codecs/: midi.pdl  midi.pdl2  parsererrors.txt  patch.pdl  patch.pdl2
libs/jmisc/: build.xml
libs/jnmprotocol/: CHANGELOG  build.xml
libs/jnmprotocol2/: CHANGELOG  build.xml
libs/jpatch/: build.xml
libs/jpdl/: CHANGELOG  build.xml
libs/jpdl2/: build.xml
libs/jprotocol/: build.xml
libs/jsynth/: build.xml
libs/jtheme/: build.xml
libs/libnmpatch/: Makefile.in  SConstruct  config.status  configure  configure.in
libs/libnmpatch/src/: Makefile.am  Makefile.in  cable.cc  ctrlmap.cc  knobmap.cc  module.cc  module.ppf  modulesection.cc  moduletype.cc  morph.cc  morphmap.cc  nmlexer.cc  nmpatch.i  note.cc  patch.cc  patch.lex  patchlexer.ll  patchparser.yy
libs/libnmprotocol/: Makefile.am  Makefile.in  SConstruct  bootstrap.sh  configure  configure.in
libs/libnmprotocol/nmprotocol/: Makefile.am  acklistener.h  ackmessage.h  activepidlistener.h  alsadriver.h  enqueuedpacket.h  iammessage.h  lightmessage.h  mididriver.h  midimessage.h  netmididriver.h  nmprotocol.h  nmprotocollistener.h  parametermessage.h  patchlistmessage.h  patchmessage.h  requestpatchmessage.h  slotsselectedmessage.h  synth.h  synthlistener.h
libs/libnmprotocol/src/: Makefile.am  Makefile.in  ackmessage.cc  activepidlistener.cc  alsadriver.cc  getpatchlistmessage.cc  getpatchmessage.cc  iammessage.cc  lightmessage.cc  midi.pdl  mididriver.cc  midimessage.cc  netmididriver.cc  newpatchinslotmessage.cc  nmprotocol.cc  nmprotocol.i  nmprotocollistener.cc  parametermessage.cc  patch.pdl  patchlistmessage.cc  patchmessage.cc  requestpatchmessage.cc  rtmididriver.cc  slotactivatedmessage.cc  slotsselectedmessage.cc  synth.cc  voicecountmessage.cc
libs/libnmprotocol/test/: Makefile.am  Makefile.in  libnmprotocol_test2.cc  libnmprotocol_test3.cc  libnmprotocol_test4.cc  libnmprotocol_test5.cc  libnmprotocol_test7.cc  libnmprotocol_test8.cc  libnmprotocol_test9.cc
libs/libpdl/: AUTHORS  Makefile.in  SConstruct  aclocal.m4  config.status  configure  configure.in
libs/libpdl/doc/: Makefile.am  Makefile.in  architecture.dia  pdl.dia  pdl.html
libs/libpdl/pdl/: bitstream.h  condition.h  constantmatcher.h  intstream.h  packet.h  parser.h  pdlexception.h  pdllexer.h  variablematcher.h
libs/libpdl/src/: Makefile.am  Makefile.in  bitstream.cc  condition.cc  constantmatcher.cc  intstream.cc  matcher.cc  packet.cc  packetmatcher.cc  packetparser.cc  pdl.i  pdllex.ll  pdllexer.cc  pdlparser.yy  protocol.cc
libs/libpdl/test/: Makefile.am  Makefile.in  test1.pdl
libs/libppf/: Makefile.am  SConstruct  configure.in
libs/nmutils/: .cvsignore  build.xml
libs/nordmodular/: build.xml
libs/patchmodifier/: build.xml
libs/waldorf/: .cvsignore  build.xml
nmedit/: Makefile.in  SConstruct  configure
nmedit/src/: Makefile.am  Makefile.in  logger.cc  logger.h  loggerlistener.h  main.cc  mainwindow.cc  mainwindow.h  moduleview.cc  moduleview.h  nmapp.cc  nmapp.h  nmframe.cc  nmframe.h  patchview.cc  sectionview.cc  sectionview.h  synth.cc  synth.h  synthlistener.h  synthview.cc  synthview.h
nomad/: .classpath  .cvsignore  .project  build.xml  changelog.txt  dist.sh
nomad/artwork/: .cvsignore  README
nomad/doc/: DESIGN
nomad/nomad-config/: README  _DEPENCIES_TEMPLATE-plugin_ant.xml  _INSTALLER_ant.xml  _TEMPLATE-plugin_ant.xml  batik-plugin_ant.xml  commons-logging_ant.xml  coremidi4j-lib-ant.xml  cssparser-plugin_ant.xml  jdom-plugin_ant.xml  jnmprotocol-plugin_ant.xml  jpatch-plugin_ant.xml  jpdl-plugin_ant.xml  jsynth-plugin_ant.xml  jtheme-plugin_ant.xml  log4j-logging_ant.xml  miniworks4pole-plugin_ant.xml  nmutils-plugin_ant.xml  nordmodular-plugin_ant.xml  patchmodifier-plugin_ant.xml  rhino-plugin_ant.xml  sac-plugin_ant.xml  xerces-plugin_ant.xml
nomad/nomad-source/: .cvsignore  boot.properties  log4j.dist.properties  log4j.properties  nomad.properties
nomad/project-utils/: .cvsignore  build.xml
nomad/src/: ModuleFormTest.java  Nomad.bat  Nomad.mf  README.txt  deliver.bat
patchloader/: SConstruct  aclocal.m4  configure  configure.in
patchloader/src/: Makefile.am  patchloader.cc
(+2957 files in other folders)
