includedir = $(prefix)/include/nmprotocol
include_HEADERS = ackmessage.h activepidlistener.h alsadriver.h enqueuedpacket.h getpatchlistmessage.h getpatchmessage.h iammessage.h lightmessage.h mididriver.h midiexception.h midimessage.h netmididriver.h newpatchinslotmessage.h nmprotocol.h nmprotocollistener.h parametermessage.h patchlistmessage.h patchmessage.h requestpatchmessage.h slotactivatedmessage.h slotsselectedmessage.h voicecountmessage.h
