
INCLUDES = -I.. -I../../libpdl -I../../libnmpatch
LDFLAGS = -L../src -L../../libpdl/src -L../../libnmpatch/src

LDADD = -lpdl -lnmpatch -lnmprotocol

bin_PROGRAMS = libnmprotocol_test1 libnmprotocol_test2 libnmprotocol_test3 libnmprotocol_test4

libnmprotocol_test1_SOURCES = libnmprotocol_test1.cc
libnmprotocol_test2_SOURCES = libnmprotocol_test2.cc
libnmprotocol_test3_SOURCES = libnmprotocol_test3.cc
libnmprotocol_test4_SOURCES = libnmprotocol_test4.cc
