
INCLUDES = -I.. -I../../libpdl -I../../libnmpatch
LDFLAGS = -L../src -L../../libpdl/src -L../../libnmpatch/src

LDADD = -lpdl -lnmprotocol -lnmpatch

bin_PROGRAMS = libnmprotocol_test1 libnmprotocol_test2 libnmprotocol_test3 libnmprotocol_test4  libnmprotocol_test5 libnmprotocol_test6 libnmprotocol_test7 libnmprotocol_test8

libnmprotocol_test1_SOURCES = libnmprotocol_test1.cc
libnmprotocol_test2_SOURCES = libnmprotocol_test2.cc
libnmprotocol_test3_SOURCES = libnmprotocol_test3.cc
libnmprotocol_test4_SOURCES = libnmprotocol_test4.cc
libnmprotocol_test5_SOURCES = libnmprotocol_test5.cc
libnmprotocol_test6_SOURCES = libnmprotocol_test6.cc
libnmprotocol_test7_SOURCES = libnmprotocol_test7.cc
libnmprotocol_test8_SOURCES = libnmprotocol_test8.cc
